<resources>
    <string name="app_name">Flower Doc</string>
    <string name="buttonSelectPhoto">Select Photo</string>
    <string name="buttonTakePhoto">Start Camera</string>
    <string name="buttonDiagnose">Detect</string>
    <string name="defaultImage">Default image set now...</string>
    <string name="descriptionImage">View for displaying image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sub_name">Citrus, genus of plants belonging to the rue family (Rutaceae), and yielding pulpy fruits covered with fairly thick skins. Economically important plants in this group include the lemon (C. ×limon), lime (C. ×aurantiifolia), sweet orange (C. ×sinensis), sour orange (C. ×aurantium), tangerine (C. reticulata), grapefruit (C. ×paradisi), citron (C. medica), and shaddock (C. maxima).</string>
    <string name="showPrecautions">Precaution</string>
    <string name="hi">Hi Nature Lover,</string>
    <string name="give_your">Give your plant a healthy life.</string>
    <string name="get_started">Get Explore</string>
    <string name="ml">By using \nMachine Learning model</string>
    <string name="open_gallery">OPEN GALLERY</string>
    <string name="start_camera">START CAMERA</string>
    <string name="message">Message</string>
    <string name="resultTxt">Your Result</string>
    <string name="detect_txt">1. First import or capture an image \n2. When is load into the ImageView, you are ready to detect the disease</string>
    <string name="gray_leaf_spot">Corn (maize) Cercospora leaf spot Gray leaf spot</string>
    <string name="gray_leaf_spot_cause">Gray leaf spot is caused by the fungus Cercospora zeae-maydis.\n\nEpidemics of gray leaf spot have been observed in New York State in the Southern Tier and the Hudson River Valley. New hot spots of the disease have been reported in the Mohawk Valley and the Leatherstocking Region. \n\nGray leaf spot is favored by wet humid weather as often found in valley microclimates. Additionally, it is favored in situations with reduced tillage and continuous corn.</string>
    <string name="manage">Management Strategies</string>
    <string name="mangeStat">Management strategies for gray leaf spot include tillage, crop rotation and planting resistant hybrids.  \n\nFungicides may be needed to prevent significant loss when plants are infected early and environmental conditions favor disease.</string>
    <string name="sym">Symptoms</string>
    <string name="symDesc">Symptoms of gray leaf spot are usually first noticed in the lower leaves.  \n\nInitially, lesions of gray leaf spot begin as a small dot with a yellow halo.  \n\nLesions will elongate over time running parallel to the veins becoming pale brown to gray and rectangular in shape with blunt ends. These lesions can be described as having the appearance of a “matchstick.”  \n\nLesions may eventually coalesce killing the leaves.  \n\nLeaves appear grayish in color due to the presence of fungal spores.</string>
    <string name="images">Images</string>
    <string name="common_rust">Common Rust</string>
    <string name="common_rust_cause">Common rust is caused by the fungus Puccinia sorghi. Late occurring infections have limited impact on yield.  \n\nThe fungus overwinters on plants in southern states and airborne spores are wind-blown to northern states during the growing season.  \n\nDisease development is favored by cool, moist weather (60 – 70◦ F).</string>
    <string name="common_rust_mangeStat">The use of resistant hybrids is the primary management strategy for the control of common rust.  \n\nTimely planting of corn early during the growing season may help to avoid high inoculum levels or environmental conditions that would promote disease development.</string>
    <string name="common_rustsymDesc">Symptoms of common rust often appear after silking.  \n\nSmall, round to elongate brown pustules form on both leaf surfaces and other above ground parts of the plant.  \n\nAs the pustules mature they become brown to black.  \n\nIf disease is severe, the leaves may yellow and die early.</string>
    <string name="corn_healthy">Corn Healthy</string>
    <string name="corn_healthy_cause">There is nothing wrong in this leaf. This leaf is free from all diseases. No need to take any precautions. Keep your plant healthy like this.</string>
    <string name="northernSpot">Northern Corn Leaf Blight</string>
    <string name="northernSpot_cause">Northern corn leaf blight caused by the fungus Exerohilum turcicum is a common leaf blight found in New York.  \n\nIf lesions begin early (before silking), crop loss can result. Late infections may have less of an impact on yield.  \n\nNorthern corn leaf blight is favored by wet humid cool weather typically found later in the growing season.  \n\nSpores of the fungus that causes this disease can be transported by wind long distances from infected fields. Spread within and between fields locally also relies on wind blown spores.</string>
    <string name="northernSpot_mangeStat">Northern corn leaf blight can be managed through the use of resistant hybrids.  Additionally, timely planting can be useful for avoiding conditions that favor the disease.</string>
    <string name="northernSpot_symDesc">The tan lesions of northern corn leaf blight are slender and oblong tapering at the ends ranging in size between 1 to 6 inches.  \n\nLesions run parallel to the leaf margins beginning on the lower leaves and moving up the plant. They may coalesce and cover the enter leaf.  \n\nSpores are produced on the underside of the leaf below the lesions giving the appearance of a dusty green fuzz.</string>
    <string name="choose">Choose component \nwhich interest you</string>
    <string name="aboutCorn">About Corn</string>
    <string name="help">How to Detect Disease</string>
    <string name="aboutApp">About App</string>
    <string name="aboutDev">About Developer</string>
    <string name="detect_disease">Detect Disease</string>
    <string name="disease_detector">Disease Detector</string>
    <string name="corn1">Corn, <b>(Zea mays)</b>, also called <b>Indian corn</b> or <b>maize</b>, cereal plant of the grass family (Poaceae) and its edible grain. The domesticated crop originated in the Americas and is one of the most widely distributed of the world’s food crops.</string>
    <string name="corn2">"Corn was first domesticated by native peoples in <b>Mexico</b> about <b>10,000 years</b> ago. Native Americans taught European colonists to grow the indigenous grains, and, since its introduction into Europe by <i>Christopher Columbus</i> and other explorers, corn has spread to all areas of the world suitable to its cultivation. It is grown from <b>58° N</b> latitude in <b>Canada</b> and <b>Russia</b> to <b>40° S</b> latitude in South America, with a corn crop maturing somewhere in the world nearly every month of the year. "</string>
    <string name="corn3">Although it is a major food in many parts of the world, corn is inferior to other cereals in nutritional value. Its protein is of poor quality, and it is deficient in niacin. Diets in which it predominates often result in pellagra (niacin-deficiency disease). Its gluten (elastic protein) is of comparatively poor quality, and it is not used to produce leavened bread. It is widely used, however, in Latin American cuisine to make masa, a kind of dough used in such staple foods as tortillas and tamales.</string>
    <string name="corn4">Many parts of the corn plant are used in industry. Cornstarch can be broken down into corn syrup, a common sweetener that is generally less expensive than sucrose; high-fructose corn syrup is used extensively in processed foods such as soft drinks and candies. Stalks are made into paper and wallboard; husks are used as filling material; cobs are used directly for fuel, to make charcoal, and in the preparation of industrial solvents. Corn grain is processed by wet milling, in which the grain is soaked in a dilute solution of sulfurous acid; by dry milling, in which the corn is exposed to a water spray or steam; and by fermentation, in which starches are changed to sugars and yeast is employed to convert the sugars into alcohol.</string>
    <string name="about1">This app is all about detect disease from different crop leaves. Now a days, many farmer or other people face a problem that their plants are affected by many diseases. But they are not aware what to do and where to do. So this app will guide them to detect what type of disease is affected in their plant.</string>
    <string name="about2">Here user can detect the leaf diseases of <b>Apple, Banana, Chili, Citrus, Maize, Cotton, Grapes, Mango, Papaya, Potato, Rice, Tea, and Tomato</b> . By using machine learning model this app will detect your plant leaf diseases in a quick way.</string>
    <string name="userimage">userImage</string>
    <string name="name">Name</string>
    <string name="yourName">Golap Gunjan Barman</string>
    <string name="github">GitHub</string>
    <string name="githubLink"><a href="https://github.com/barmangolap15">barmangolap15</a></string>
    <string name="web">Website</string>
    <string name="website"><a href="https://www.gbandroidblogs.com/">GBAndroidBlogs</a></string>
    <string name="banner">banner</string>
    <string name="demo_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="register_text">Create an account \nand explore with <b>LeafAI</b></string>
    <string name="displayName">Enter full name</string>
    <string name="prompt_email">Enter email id</string>
    <string name="prompt_password">Enter password</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="register_here"><u>Register here</u></string>
    <string name="weather_temp_default">N/A</string>
    <string name="weather_icon_default">N/A</string>
    <string name="forgot_password">Enter the email address associated with your account:</string>
    <string name="tryanother"><u>Try a different email</u></string>
    <string name="scales">1. Scales: These remain covered inside a hard coating which looks like a waxy scale and infests lower surface of leaves and veins of branches.</string>
    <string name="thrip">2. Thrips: These are minute sucking insects that mainly attack tender leaves, twigs and flower buds, making the affected plants weak with burnt appearance.</string>
    <string name="aphids">3. Aphids: These brownish or green insects suck sap from tender shoots, leaves and flower buds. The affected plant becomes weak and retards in growth.</string>
    <string name="mealybugs">4. Mealybugs: These are small fleshy insects which remain covered in white, wooly and waxy secretions. Generally, older plants are affected.</string>
    <string name="whitefiles">5. Whiteflies: These are tiny insects, white in color and are very active in damp and dark conditions.</string>
    <string name="spider_mites">6. Spider-Mites: This is a minute dot sized dangerous, shoot sucking pest, red in color, almost invisible to the naked eyes, resembling the spider but not an actual spider.</string>
    <string name="caterpillr">7. Caterpillars: Various caterpillars feed on foliage, they damage the leaves by feeding continuously.</string>
    <string name="leaf_bettle">8. Leaf Beetles and Weevils: These leaf infesting flying insects are considered as serious pests on flowering plants like Roses.</string>
    <string name="cut_worms">9. Cut worms: This bug remains in the soil and attacks the plant at ground level.</string>
    <string name="leaf_miner">10. Leaf-miners: The larvae of theses insects mine into leaves between tissue layers, leaving excreta on leaf surface and creating typical white patterns on leaves.</string>
</resources>