<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PestsActivity"
    android:background="@color/white2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white2">

            <androidx.appcompat.widget.Toolbar
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/back_icon"
                        android:padding="6dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Flower"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/metropolis_regular"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.03"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Doc"
                        android:layout_gravity="center"
                        android:fontFamily="@font/metropolis_bold"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.03"/>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scales"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/scales"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/scale_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/scales"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thrip"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:id="@+id/thrip"
                android:letterSpacing="0.02"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/thrips_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/theips"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aphids"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/aphids"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/aphids_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/aphides"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/mealybugs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mealybugs"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/mealybugs_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/mealybugs"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whitefiles"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/whitefiles"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/whitefiles_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/whiteflies"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/spidermites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spider_mites"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/spidermites_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/spidermites"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caterpillr"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/caterpiller"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/caterpiller_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/caterpillars"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leaf_bettle"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/leaf_bettl"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/leaf_bettl_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/weevil"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut_worms"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/cutworms"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cutworms_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cutworms"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leaf_miner"
                android:textColor="@color/black"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="16sp"
                android:letterSpacing="0.02"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/leaf_miner"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/leaf_miner_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:background="@drawable/white_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/leaf_miner"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>